feat: play with printer